--- a/css/faq.css
+++ b/css/faq.css
@@ -6,43 +6,42 @@
     flex-direction: column;
     align-items: center;
 }
-  
+
 .faq .title {
     position: absolute;
     font-family: "Josefin Sans";
     font-size: 3rem;
     margin: 2rem 0rem;
     color: #00fdef;
-} 
-  
+}
+
 .faq .container {
     background: #03dbc7;
-    padding-left: 30px;
-    padding-right: 150px;
+    padding-left: -10px;
+    padding-right: -20px;
     display: flex;
-    justify-content: start;
-     width:800px; 
+    justify-content: center;
+    width: 65%;
     border-radius: 25px;
     margin-top: 100px;
-  
     display: flex;
 }
-  
+
 .faq .ques {
     margin-top: 25px;
     font-size: 50;
     font-family: "League Spartan";
     font-weight: 800;
-  
+
     font-size: 20px;
     line-height: 29px;
     margin-bottom: 15px;
 }
-  
+
 .faq .info {
     display: flex;
 }
-  
+
 .faq .cont {
     display: inline-block;
 }
@@ -55,16 +54,104 @@
     font-weight: 400;
     cursor: pointer;
 }
-  
-.faq .faq-body{
+
+.faq .faq-body {
     display: none;
 }
-  
-.faq .show-answer{
+
+.faq .show-answer {
     display: block;
 }
-  
-.faq hr{
+
+.faq hr {
     border: 1px solid black;
 }
-  
+
+@media (max-width: 1024px) {
+    .faq {
+        width: 100%;
+        min-height: fit-content;
+        padding-bottom: 85px;
+
+
+    }
+
+    .faq .container {
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 80%;
+    }
+
+}
+
+@media (max-width: 878px) {
+    .faq {
+        width: 100%;
+        min-height: fit-content;
+        padding-bottom: 80px;
+
+
+    }
+
+    .faq .container {
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 80%;
+    }
+
+}
+
+@media (max-width: 770px) {
+    .faq {
+        width: 100%;
+        min-height: fit-content;
+        padding-bottom: 85px;
+
+
+    }
+
+    .faq .container {
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 85%;
+    }
+
+
+}
+
+@media (max-width: 654px) {
+    .faq {
+        width: 100%;
+        min-height: fit-content;
+        padding-bottom: 85px;
+
+
+    }
+
+    .faq .container {
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 85%;
+    }
+}
+
+@media (max-width: 500px) {
+    .faq {
+        width: 100%;
+        min-height: fit-content;
+        padding-bottom: 85px;
+
+
+    }
+
+    .faq .container {
+        padding-left: 10px;
+        padding-right: 5px;
+        width: 85%;
+    }
+
+    .faq .ques {
+        font-size: 18px;
+    }
+
+}
